add benchmark prototype
