# openapi/openapi.yaml
@@ -36,6 +36,47 @@ paths:
                 items:
                   $ref: "#/components/schemas/TaskCategory"
 
+  /benchmarkconfigs:
+    get:
+      summary: Returns all benchmark configs
+      security: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/BenchmarkConfig"
+
+  /benchmark/{benchmark_id}:
+    get:
+      summary: Returns benchmark metadata by id
+      security: []
+      description: Returns benchmark metadata by id. 
+      parameters:
+        - in: path
+          name: benchmark_id
+          example: 61611c3a414abfb115397ca5
+          schema:
+            type: string
+          required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Benchmark"
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/APIError"
+
+
   /datasets/{dataset_id}:
     get:
       summary: Returns dataset metadata by id
@@ -960,6 +1001,28 @@ components:
             type: integer
           text:
             type: string
+
+    Benchmark:
+      type: object
+      properties:
+        overall:
+          type: array
+          items:
+            type: object
+      additionalProperties: true
+      required: [overall]
+
+    BenchmarkConfig:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        logo:
+          type: string
+      additionalProperties: true
+      required: [name]
 
     User:
       type: object
